# kicad_file_parse

./: .flake8  .gitignore  LICENSE  MANIFEST.in  README.md  TODO.md  pyproject.toml
.claude/: settings.local.json
doc/: custom-design-rules.html
doc/file-formats/: parse_sexpr_docs.py  sexp-design-rules.md  sexp-intro.md  sexp-pcb.md  sexp-schematic.md  sexp-worksheet.md
docs/: build-docs.py  conf.py  index.rst
docs/modules/: examples.rst  file_formats.rst  kicad_parser.rst
examples/: basic_usage.py  create_symbol.py  file_comparison.py  file_conversion.py  kicad_pcb_v2_test.py  pcb_example.py  round_trip_test.py  schematic_example.py  string_conversion_example.py  test_file_comparison.py  worksheet_example.py
examples/test_data/: LP5018RSMR.kicad_sym  QFN40P400X400X100-33N.kicad_mod  small.kicad_sym  small_upgrade.kicad_sym
examples/test_data/example1/: example1.kicad_pcb  example1.kicad_prl  example1.kicad_pro  example1.kicad_sch
examples/test_data/example2/: FDC1004DGSR.kicad_sym  PowerBasket.kicad_sym  example2.kicad_prl  fp-lib-table  sym-lib-table
examples/test_data/example3/: Snapeda_kicad_sym.dcm  Snapeda_kicad_sym.kicad_sym
examples/test_data/example3/Snapeda.pretty/: AZ1117CH-3.3TRG1_DIODES_AZ1117CH-3.3TRG1_0.kicad_mod  CONV_TEC_2-2423WI.kicad_mod  DIODES_AZ1117CH-3.3TRG1_0.kicad_mod  DIP825W47P254L1917H533Q14.kicad_mod  EJ508B_MPD_EJ508B.kicad_mod  EPC2019_ECC.kicad_mod  LINX_CONUFL001-SMD.kicad_mod  LIS2HH12TR_PQFN50P200X200X100-12N.kicad_mod  MPD_EJ508B.kicad_mod  (+3 more)
examples/test_data/example_small/: KiCad.kicad_prl  KiCad.kicad_pro  KiCad.kicad_sch
kicad_parser/: __init__.py  file_comparison_utils.py  kicad_board.py  kicad_board_elements.py  kicad_common.py  kicad_design_rules.py  kicad_file.py  kicad_graphics.py  kicad_main.py  kicad_pcb.py  kicad_schematic.py  kicad_symbol.py  kicad_worksheet.py  sexpdata.py
kicad_parserv2/: __init__.py  advanced_graphics.py  base_element.py  base_types.py  board_layout.py  design_rules.py  enums.py  footprint_library.py  json_base_element.py  pad_and_drill.py  readme.md  schematic_system.py  sexpr_parser.py  symbol_library.py  text_and_documents.py  zone_system.py
tests/: __init__.py  conftest.py  test_all_classes_roundtrip.py  test_base_element.py  test_base_element_comprehensive.py  test_base_element_working.py  test_complete_functionality_demo.py  test_comprehensive_parsing.py  test_convenience_methods.py  test_equality.py  test_json_roundtrip.py  test_kicadobject_comprehensive.py  test_optional_flag.py  test_parameter_tracking.py  test_parser_gap_detection.py  test_strictness.py  test_string_parsing_with_tracking.py
tests/data/: minimal_footprint.kicad_mod  minimal_symbol.kicad_sym
tests/integration/: test_real_data.py
tests/unit/: test_board.py  test_common.py  test_design_rules.py  test_examples.py  test_file_io.py  test_graphics.py  test_kicad_symbol_library.py  test_pcb.py  test_real_world_design_rules.py  test_round_trip.py  test_schematic.py  test_sexpr_parser.py  test_symbol.py  test_symbol_pin.py  test_version_parsing.py  test_worksheet.py
